fix date not showing

--- a/src/components/timeline/verticaltimeline.css
+++ b/src/components/timeline/verticaltimeline.css
@@ -14,3 +14,7 @@
   box-shadow: 0 0 0 4px #000, inset 0 2px 0 rgba(0, 0, 0, 0.08),
     0 3px 0 4px rgba(0, 0, 0, 0.05);
 }
+
+.vertical-timeline-element-date {
+  color: #000;
+}
